--- a/server/Gemfile
+++ b/server/Gemfile
@@ -38,6 +38,9 @@ gem "rack-cors"
 
 gem "ruby-openai"
 
+gem "matrix", "~> 0.4.2"
+gem "daru"
+
 gem "dotenv-rails", groups: [:development, :test]
 
 group :development, :test do
