--- a/server/Gemfile
+++ b/server/Gemfile
@@ -41,6 +41,8 @@ gem "ruby-openai"
 gem "matrix", "~> 0.4.2"
 gem "daru"
 
+gem "pg"
+
 gem "dotenv-rails", groups: [:development, :test]
 
 group :development, :test do
