--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-type-animation": "^3.1.0",
     "reactstrap": "^9.2.0",
     "sass": "^1.64.1",
     "typescript": "^4.9.5",
